Fixed several small bugs. Reduced spacing on smaller screen sizes.

--- a/css/mikrodosering.css
+++ b/css/mikrodosering.css
@@ -57,10 +57,6 @@ a, a:active, a:focus {
   color: rgba(255, 255, 255, 0.7);
 }
 
-section {
-  padding: 8rem 0;
-}
-
 .section-heading {
   margin-top: 0;
 }
@@ -294,8 +290,13 @@ h2 {
 
 @media (min-width: 576px) {
   h2 {
+    font-size: 32px;
+  }
+}
+
+@media (min-width: 768px) {
+  h2 {
     font-size: 37px;
-    letter-spacing: 0.18px;
   }
 }
 
@@ -432,6 +433,11 @@ h5 {
   background-color: #7f289e !important;
 }
 
+
+section {
+  padding: 6rem 0 2rem 0;
+}
+
 .btn_hide {
   display: none;
 }
@@ -439,6 +445,9 @@ h5 {
 @media (min-width: 768px) {
   .btn_hide {
     display: inline-block;
+  }
+  section {
+    padding: 8rem 0;
   }
 }
 
@@ -483,4 +492,44 @@ blockquote hr {
 
 .fa-link {
   font-size: .9em;
+}
+
+#mc_embed_signup{
+  margin: 0;
+}
+
+@media (min-width: 370px) {
+  #mc_embed_signup{
+    margin: 0 3em 0 3em;
+  }
+}
+
+@media (min-width: 650px) {
+  #mc_embed_signup{
+    margin: 0;
+  }
+}
+
+@media (min-width: 768px) {
+  #mc_embed_signup{
+    margin: 0 1em 0 1em;
+  }
+}
+
+@media (min-width: 992px) {
+  #mc_embed_signup{
+    margin: 0em;
+  }
+}
+
+@media (min-width: 1200px) {
+  #mc_embed_signup{
+    margin: 0 2em 0 2em;
+  }
+}
+
+@media (min-width: 576px) {
+  #mce-EMAIL{
+    font-size: 80%;
+  }
 }
